--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 nav ul {
   list-style: square;
   padding: 1rem; /* fixed unit */
-  margin-top: 0rem;
+  padding-top: 20px;
+  margin-top: 1rem;
   text-align: center;
-  background-color: #002233;
+
   margin-top: 0px;
 
 }
+
+
 
 nav ul li {
   display: inline-block;
@@ -19,8 +22,8 @@ nav ul li a {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
                'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-  background-color: #1e1e1e;
-  border-radius: 0.25rem;
+border: #0026a4 0.125rem solid;
+  border-radius: 1.25rem;
   padding: 0.5rem 1rem;
 
 
@@ -31,7 +34,7 @@ nav ul li a {
 nav ul li a:hover {
     font-weight: bold;
   font-size: 1.25rem;
-  box-shadow: 0px 0px 0.3125rem rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 6.3125rem rgb(229, 229, 246);
   
 }
 
@@ -49,17 +52,19 @@ body {
     background: linear-gradient(to bottom, #001653, #64005b 70%, #001653);
     margin: 0rem;
     padding: 0rem;
-    min-height: 100vh;
+    min-height:99vh;
 
 }
 
 .topbar {
     background-color: #191919;
-    color: white;
-    padding-top: 0rem;
-    text-align: center;
+    color: rgb(68, 68, 68);
+    padding-top: 0.2rem;
+        background: transparent;
+    text-align: left;
     height: 2rem;
     width: 100%;
+    box-shadow: 20px 0px 6.625rem rgb(93, 0, 255);
 }
 
 /*        Text        */
@@ -106,6 +111,12 @@ h4 {
 }
 
 
+.deco {
+    width: 50%;
+    border-radius: 200px;
+}
+
+
 
 
 
@@ -118,8 +129,6 @@ h4 {
     gap: 1rem;
     margin: 6rem;
 }
-
-
 
 
 
@@ -138,14 +147,18 @@ h4 {
     padding: 1rem;
     min-height: 20rem;
     box-shadow: 0px 0px 6.625rem #bb4e00;
+    background-color: #64005b;
 }
 
 .Box3 {
-    border: 0.225rem solid #bb0000;
+    border: 0.225rem solid #00c3ff;
     border-radius: 0.625rem;
     padding: 1rem;
     min-height: 20rem;
-    box-shadow: 0px 0px 6.625rem #bb0000;
+    margin-left: 8%;
+    width: 80%;
+    box-shadow: 0px 0px 6.625rem #00c3ff;
+    background-color: #00c3ff99;
 }
 
 
@@ -153,10 +166,46 @@ h4 {
 
 
 
+.Box1:hover, .Box2:hover, .Box3:hover {
+    transform: scale(1.02);
+    transition: transform 0.3s ease;
+}
 
 
+.Box1 img, .Box2 img, .Box3 img {
+    display: block;
+    margin: 1rem auto 0 auto;
+    max-width: 100%;
+    height: auto;
+}
 
 
+/* Form */
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    
+
+}
+
+.contact-inputs {
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #666;
+    border-radius: 20px;
+
+}
+
+.contact-inputs:focus {
+    border: 2px solid rgb(0, 121, 207);
+}
 
 
 
@@ -167,9 +216,11 @@ footer {
     background-color: #002233;
     color: white;
     text-align: center;
-    padding-top:  0rem;
-    width: 100%;
-    bottom: 0;
+    padding-top: 20px;
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 1.625rem rgba(98, 0, 255, 0.5);
 }
 
 .social-links {
@@ -183,6 +234,11 @@ footer {
     font-size: 1.25rem;
     transition: color 0.3s ease;
 }
+
+
+
+
+
 
 .social-links a:hover {
     color: #42a3ff;
@@ -199,19 +255,146 @@ footer {
         grid-template-columns: 1fr;
         margin: 1rem;
     }
+
+    h1 {
+    font-size: 13px;
+}
+
 }
 
 @media (max-width: 480px) {
     .social-links a {
         font-size: 1rem;
-        margin: 0 0.25rem;
+        margin: 0.15rem;
     }
 
     .grid-container {
-        margin: 0.5rem;
+        margin: 0.01rem;
     }
+
+
+
+.contact::placeholder {
+    color: lightgrey;
+}
+
+button {
+    display: flex;
+    align-items: start;
+    background-color: #42a3ff;
+}
+
+    nav ul li a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
+               'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+border: #0026a4 0.125rem solid;
+  border-radius: 1.25rem;
+  padding: 0.5rem 1rem;
+  font-size: 12px;
+
+
+
+  transition: color 0.3s ease, font-size 0.3s ease;
+}
+
+
+nav ul {
+  list-style: square;
+  padding-left: 0p; /* fixed unit */
+  margin-top: 0rem;
+  text-align: center;
+
+  margin-top: 0px;
+}
+
+h4 {
+    font-size: 1.25rem;
+    padding-left:3rem;
+    margin-right: 50px;
+    display: none;
+
+}
+
+.Box2 {
+    border: 0.225rem solid #bb4e00;
+    border-radius: 0.625rem;
+    width: 60%;
+    margin-left: 54px;
+    min-height: 10rem;
+    box-shadow: 0px 0px 6.625rem #bb4e00;
+    background-color: #64005b;
+
+}
+
+.Box1 {
+    border: 0.225rem solid #6a00bb;
+    border-radius: 0.625rem;
+     width: 60%;
+    margin-left: 54px;
+    min-height: 10rem;
+    box-shadow: 0px 0px 6.625rem rgba(179, 0, 164, 0.5);
+}
+
+    
+.Box3 {
+    border: 0.225rem solid #00c3ff;
+    border-radius: 0.625rem;
+    padding: 1rem;
+    margin-left: 54px;
+    width: 60%;
+    min-height: 14rem;
+
+
+        box-shadow: 0px 0px 6.625rem #00c3ff;
+    background-color: #00c3ff99;
+}
+
+
+
+h3 {
+    font-size: 20px;
+}
+
+h1 {
+    font-size: 12px;
+}
+
+/* Form */
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    
+
+}
+
+.contact-inputs {
+    width: 185px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #666;
+    border-radius: 20px;
+
+}
+
+.contact-inputs:focus {
+    border: 2px solid rgb(0, 121, 207);
 }
 
 
 
 
+
+
+}
+
+
+ 
