--- a/style.css
+++ b/style.css
@@ -116,7 +116,11 @@ h4 {
     border-radius: 200px;
 }
 
-
+.newyears {
+    font-size: 30px;
+    color: gold;
+    margin-left: 34%;
+}
 
 
 
@@ -147,7 +151,7 @@ h4 {
     padding: 1rem;
     min-height: 20rem;
     box-shadow: 0px 0px 6.625rem #bb4e00;
-    background-color: #64005b;
+
 }
 
 .Box3 {
@@ -228,10 +232,10 @@ footer {
 }
 
 .social-links a {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     margin: 0 0.5rem;
-    font-size: 1.25rem;
+    font-size: 0.25rem;
     transition: color 0.3s ease;
 }
 
@@ -389,6 +393,11 @@ h1 {
     border: 2px solid rgb(0, 121, 207);
 }
 
+.newyears {
+    font-size: 30px;
+    color: gold;
+    margin-left: 24%;
+}
 
 
 
