--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ h4 {
     border-radius: 0.625rem;
     padding: 1rem;
     min-height: 20rem;
+    background-color: #64005b;
     box-shadow: 0px 0px 6.625rem #bb4e00;
 
 }
@@ -454,3 +455,4 @@ h3 {
 
 
 }
+
