--- a/style.css
+++ b/style.css
@@ -58,6 +58,23 @@ font-face {
     font-style: normal;
 }
 
+h5 {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #ffffff;
+    text-align: center;
+    background: #6f0085;
+    border-radius: 10px;
+    width: 820px;
+    margin: 2rem auto;
+    padding-top: 10px;
+    height: 30px;
+
+    letter-spacing: 0.5px;
+   
+    text-shadow: 0px 0px 1rem rgb(0, 118, 187);
+}
+
 
 .soundfxButton {
     background-color: rgb(30, 0, 255);
@@ -249,13 +266,12 @@ h4 {
 
 
 footer {
-    background-color: #002233;
+    background-color: #6d016f;
     color: white;
     text-align: center;
     padding-top: 20px;
     margin-top: 2rem;
     padding-bottom: 2rem;
-    margin-bottom: 20px;
     box-shadow: 0px 0px 1.625rem rgba(98, 0, 255, 0.5);
 }
 
@@ -295,6 +311,23 @@ footer {
     h1 {
     font-size: 13px;
 }
+
+h5 {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #ffffff;
+    text-align: center;
+    background: #6f0085;
+    border-radius: 10px;
+    width: 250px;
+    margin: 2rem auto;
+    padding-top: 10px;
+    height: 60px;
+
+   
+    text-shadow: 0px 0px 1rem rgb(0, 118, 187);
+}
+
 
 }
 
