--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ body {
     max-width: 300px;
     margin: 30px auto;
     border-radius: 12px;
-    display: none;
+    display: block;
     text-decoration: none;
     color: white;
     padding: 12px 20px;
