--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ body {
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
 }
+
+
+
 /* Navigation bar */
 .nav {
   margin-top: 20px;
@@ -235,7 +238,15 @@ body {
     transition: transform 0.5s ease-in-out; /* smooth hover animation */
 }
 
-.content1:hover {
+
+
+
+.gap {
+    padding: 20px;
+    gap:23px;
+}
+
+.content1:hover{
     transform: translateY(-7px); /* moves the card upward */
 }
 
@@ -322,16 +333,16 @@ h2 {
     margin: 0.6em 0;
     color: #dddddd;
     text-align: center;
-    font-size: clamp(1.5rem, 4vw, 2rem);
+    font-size: 4vw;
     font-weight: 600;
 }
 
 h3 {
-    margin: 0.5em 0;
-    color: #aaaaaa;
-    text-align: center;
-    font-size: clamp(1rem, 3vw, 1.5rem);
-    font-weight: 500;
+  margin: 0.5em 0;
+  color: #aaaaaa;
+  text-align: center;
+  font-size: 3vw;
+  font-weight: 500;
 }
 
 
