--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
     max-width: 300px;
     margin: 30px auto;
     border-radius: 12px;
-    display: block;
+    display: none;
     text-decoration: none;
     color: white;
     padding: 12px 20px;
